...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rpz-Q0-CyQ">
                                <rect key="frame" x="298" y="0.0" width="14" height="22"/>
                                <accessibility key="accessibilityConfiguration" identifier="ingredientCellRemoveButton"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="xmark" catalog="system">
                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="font">
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                    </preferredSymbolConfiguration>
...
